--- a/page2.html
+++ b/page2.html
@@ -6,8 +6,8 @@
 <body>
 	<iframe src="navbar.html" frameborder="0"></iframe>
 	<ul>
-    <li>hi</li>
-    <li>there</li>
+    <li>page</li>
+    <li>2</li>
 	</ul>
 </body>
 </html>
