added site structure

--- a/about/about.html
+++ b/about/about.html
@@ -5,9 +5,6 @@
 </head>
 <body>
 	<iframe src="/navbar.html" frameborder="0"></iframe>
-	<ul>
-    <li>hi</li>
-    <li>there</li>
-	</ul>
+	Testing
 </body>
 </html>
