--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" type="text/css" href="css/navbar.css">
-<ul>
-	<li><a href="index.html" target="_top">A</a></li>
-	<li><a href="page2.html" target="_top">B</a></li>
-</ul>
+<center><ul>
+	<li>Portfolio</li>
+	<li><a href="/" target="_top">Home</a></li>
+	<li><a href="/about" target="_top">About</a></li>
+	<li><a href="/concepts" target="_top">Concepts</a></li>
+	<li><a href="/my-work" target="_top">My Work</a></li>
+</ul></center>
