--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,5 @@
-<link rel="stylesheet" type="text/css" href="css/navbar.css">
+<link rel="stylesheet" type="text/css" href="./css/navbar.css">
 <center><ul>
-	<li>Portfolio</li>
 	<li><a href="/" target="_top">Home</a></li>
 	<li><a href="/about" target="_top">About</a></li>
 	<li><a href="/concepts" target="_top">Concepts</a></li>
