--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="./css/navbar.css">
 <center><ul>
-	<li><a href="/" target="_top">Home</a></li>
-	<li><a href="/about" target="_top">About</a></li>
-	<li><a href="/concepts" target="_top">Concepts</a></li>
-	<li><a href="/my-work" target="_top">My Work</a></li>
+	<li><a href="./index.html" target="_top">Home</a></li>
+	<li><a href="./about/index.html" target="_top">About</a></li>
+	<li><a href="./concepts/index.html" target="_top">Concepts</a></li>
+	<li><a href="./my-work/index.html" target="_top">My Work</a></li>
 </ul></center>
