--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,9 @@
 <link rel="stylesheet" type="text/css" href="./css/navbar.css">
-<center><ul>
-	<li><a href="./index.html" target="_top">Home</a></li>
-	<li><a href="./about/about.html" target="_top">About</a></li>
-	<li><a href="./concepts/404.html" target="_top">Concepts</a></li>
-	<li><a href="./my-work/404.html" target="_top">My Work</a></li>
-</ul></center>
+<center>
+	<ul>
+		<li><a href="./index.html" target="_top">Home</a></li>
+		<li><a href="./about/about.html" target="_top">About</a></li>
+		<li><a href="./concepts/404.html" target="_top">Concepts</a></li>
+		<li><a href="./my-work/404.html" target="_top">My Work</a></li>
+	</ul>
+</center>
