fixed scrollbar in navbar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 </head>
 <body>
 	<iframe src="./navbar.html" frameborder="0"></iframe>
-	<ul>
-    <li>hi</li>
-    <li>there</li>
-	</ul>
+	<h1><a href="https://6167656e74323431.github.io/ICS4U0-Portfolio/concept/1/object-oriented-programming-1/oop1.html">Don't fear the OOP assignment</a></h1>
 </body>
 </html>
