made bettererer aka added /ICS4U0-Portfolio/ instead of ../../../../[etc]

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="./css/core.css">
+	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
 </head>
 <body>
 	<iframe src="./navbar.html" frameborder="0"></iframe>
-	<h1><a href="https://6167656e74323431.github.io/ICS4U0-Portfolio/concept/1/object-oriented-programming-1/oop1.html">Don't fear the OOP assignment</a></h1>
+	<h1><a href="./concept/1/object-oriented-programming-1/oop1.html">Don't fear the OOP assignment</a></h1>
 </body>
 </html>
