--- a/about/about.html
+++ b/about/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/core.css">
+	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
 </head>
 <body>
-	<iframe src="../navbar.html" frameborder="0"></iframe>
+	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"></iframe>
 	Testing
 </body>
 </html>
