--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="./css/navbar.css">
+<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/navbar.css">
 <center>
 	<ul>
 		<li><a href="./index.html" target="_top">Home</a></li>
