made navbar sticky

--- a/concept/1/object-oriented-programming-1/oop1.html
+++ b/concept/1/object-oriented-programming-1/oop1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../../../css/core.css">
+	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
 	<link rel="stylesheet" type="text/css" href="./oop1.css">
 </head>
 <body>
-	<iframe src="../../../navbar.html" frameborder="0"></iframe>
+	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"></iframe>
 	<div class="main">
 		<center>
 			<h1>OOP 1: Don't fear the OOP Assignment</h1>
