fixed navbar design issue

--- a/concept/1/object-oriented-programming-1/oop1.html
+++ b/concept/1/object-oriented-programming-1/oop1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"></iframe>
+	<div class="sidebar"></div>
 	<div class="main">
 		<center>
 			<h1>OOP 1: Don't fear the OOP Assignment</h1>
