added name for credits

--- a/concept/1/object-oriented-programming-1/oop1.html
+++ b/concept/1/object-oriented-programming-1/oop1.html
@@ -8,10 +8,10 @@
 	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"></iframe>
 	<div class="sidebar"></div>
 	<div class="main">
-		<center>
-			<h1>OOP 1: Don't fear the OOP Assignment</h1>
-		</center>
+		<h1>OOP 1: Don't fear the OOP Assignment</h1>
 		<hr>
+		<p>Peter Lin, Theodore Preduta, Larry Yuan</p>
+		<br>
 		<p class="green">Every Minecraft Village has different types of creatures and buildings: Villagers, Iron Golems, Villager Houses, Blacksmith Buildings, Churches, and Farms.</p>
 		<pre><code class="yellow">
 Village
