Update for 1st draft hand in changes: - Reduced folder structure - Finished styles for: 	- index.html 	- about.html 	- 404.html 	- concepts.html

--- a/404.html
+++ b/404.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>404!</title>
+	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/404.css">
 </head>
 <body>
-	<h1>404 page not found</h1>
+	<div style="main">
+		<center>
+			<h2>
+				The page you seek is there no more<br>
+				(Or maybe 'twas not there before),<br>
+				And thus you get this 404;<br>
+				So <a href="index.html">home</a> return, I thee implore.<br>
+				(Or <a href="javascript:history.back(1)">back</a> out through your entry door.)
+			</h2>
+		</center>
+	</div>
+	<center><b>Note:</b> This poem was taken from <a href="https://garron.us/404">https://garron.us/404</a></center>
 </body>
 </html>
