--- a/concept/1/object-oriented-programming-1/preview.html
+++ b/concept/1/object-oriented-programming-1/preview.html
@@ -5,9 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="./oop1.css">
 </head>
 <body>
-	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"><p>Please use a browser that supporst iframes.</p></iframe>
-	<div class="sidebar"></div>
-	<div class="main" id="main">
+	<div class="previewMain">
 		<h1>OOP 1: Don't fear the OOP Assignment</h1>
 		<hr>
 		<p>Peter Lin, Theodore Preduta, Larry Yuan</p>
