--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
 </head>
 <body>
-	<iframe src="./navbar.html" frameborder="0"></iframe>
-	<br><br><br>
-	<h1><a href="./concept/1/object-oriented-programming-1/oop1.html">Don't fear the OOP assignment</a></h1>
+	<iframe src="./navbar.html" frameborder="0"><p>Please use a browser that supporst iframes.</p></iframe>
+	<div class="main">
+		<h1>Welcome!</h1><hr>
+		<p>Phasellus in commodo velit, eu tempor tortor. Maecenas vel felis in neque porta consectetur. Duis aliquet gravida eros, vel cursus tortor cursus sit amet. Vivamus in rhoncus tellus. Vivamus orci risus, fermentum eu eleifend nec, tempus in odio. Vestibulum tempus tellus nec nulla semper, sit amet aliquet elit ornare. Nulla venenatis purus condimentum luctus elementum.</p>
+	</div>
 </body>
 </html>
