--- a/navbar.html
+++ b/navbar.html
@@ -1,9 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/navbar.css">
-<center>
-	<ul>
-		<li><a href="./index.html" target="_top">Home</a></li>
-		<li><a href="./about/about.html" target="_top">About</a></li>
-		<li><a href="./concepts/404.html" target="_top">Concepts</a></li>
-		<li><a href="./my-work/404.html" target="_top">My Work</a></li>
-	</ul>
-</center>
+<ul>
+	<li><a href="index.html" target="_top">Theodore's ICS4U0 Portfolio</a></li>
+	<li><a href="about.html" target="_top">About</a></li>
+	<li><a href="concepts.html" target="_top">Concepts</a></li>
+</ul>
