Added all content for final release.

--- a/404.html
+++ b/404.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/404.css">
+	<title>404!</title>
+	<link rel="stylesheet" type="text/css" href="css/404.css">
+	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div style="main">
