--- a/about.html
+++ b/about.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
+	<title>About</title>
+	<link rel="stylesheet" type="text/css" href="css/core.css">
+	<link rel="stylesheet" type="text/css" href="css/about.css">
+	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-	<iframe src="/ICS4U0-Portfolio/navbar.html" frameborder="0"><p>Please use a browser that supporst iframes.</p></iframe>
+	<iframe src="navbar.html" frameborder="0"><p>Please use a browser that supports frames.</p></iframe>
 	<div class="main">
 		<h1>Who Am I?</h1><hr>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla ac quam ac rutrum. Phasellus sagittis ante quam, quis accumsan nisl placerat vel. Donec fringilla eros facilisis dui tempus fringilla. Donec finibus, lorem in finibus ultrices, ligula ex rutrum risus, non tristique leo metus ac felis. Morbi vel vestibulum mi. Nam nec dolor id massa posuere luctus at blandit lorem. Proin eu purus ac magna tincidunt dapibus. Proin vel placerat nulla, in interdum sem. Sed aliquam scelerisque neque, ac rutrum mi rhoncus id. Praesent placerat elit feugiat metus dignissim, eget auctor ipsum pellentesque. Aliquam auctor turpis libero, ac porttitor nunc posuere ac. Cras tempus mi nec sem venenatis ullamcorper porttitor id nulla. Quisque maximus sem sed massa aliquet tincidunt. Aenean aliquam a sem in porttitor. Vestibulum luctus libero quis neque aliquet porttitor. Quisque aliquet ipsum eu sapien imperdiet ultricies.</p>
-		<p>Aenean ut est at diam congue pulvinar et at lectus. Nulla ac nisi felis. Vestibulum id pulvinar dolor. Proin laoreet quis massa et blandit. Proin risus libero, ornare nec massa in, sodales maximus leo. Donec gravida rhoncus mi, non luctus urna interdum non. Nunc blandit pellentesque magna quis scelerisque. Maecenas maximus consectetur massa. Integer tristique semper mi, sit amet volutpat felis feugiat pretium. Donec ac feugiat elit, vel faucibus odio. Fusce dui nisi, dignissim dictum tristique non, congue vel purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam eu tempus felis. Sed ornare massa vel suscipit maximus. Cras efficitur leo in fringilla tempus.</p>
-		<p>Aliquam sit amet tellus eu velit bibendum tincidunt. Donec scelerisque, felis ac molestie dapibus, mauris risus suscipit nulla, vel convallis nunc odio nec est. Nulla varius libero ut volutpat facilisis. Nullam auctor erat a purus aliquam pellentesque. Nunc quis accumsan felis. Duis non erat elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin semper volutpat tempus. Vivamus nunc enim, vehicula eu ipsum a, bibendum vestibulum dolor. Pellentesque diam nunc, interdum ut ante id, molestie iaculis ex. Donec lorem mi, varius vitae nisi nec, sodales tristique arcu. Maecenas consequat interdum erat, semper dictum turpis rhoncus in. In placerat lacus sit amet risus lacinia viverra. Proin consectetur varius velit non rhoncus. Donec eget enim dolor.</p>
-		<h1>As a student...</h1><hr>
-		<p>Integer placerat ligula neque, eget egestas erat egestas nec. Sed interdum ligula a congue finibus. Cras eleifend nisl ipsum, quis imperdiet est blandit sed. Duis mattis ante gravida purus ornare ornare. Nunc vel lorem diam. Morbi ullamcorper mauris sit amet neque maximus, quis eleifend mauris molestie. Cras odio ipsum, faucibus ac fringilla at, ullamcorper at turpis. Praesent posuere ornare nisl, a imperdiet lectus mollis quis. Vestibulum lobortis, est finibus sollicitudin suscipit, erat nisi lacinia turpis, vel blandit est lacus nec mi. In euismod, tortor semper eleifend dictum, arcu tellus gravida augue, at fermentum velit quam ac lacus. Duis sed hendrerit nisl, eu tincidunt libero. Phasellus vel faucibus arcu, quis rhoncus erat. Praesent dignissim quam at velit porta pellentesque. Quisque aliquet tincidunt neque sed consectetur.</p>
-		<p>Nam cursus ornare magna a elementum. Fusce tortor est, ullamcorper eu blandit id, varius faucibus leo. Donec ornare nunc felis, quis pharetra neque imperdiet eu. Pellentesque ultricies, magna nec tempus mattis, eros augue dignissim justo, sed pretium metus purus sit amet mauris. Donec et facilisis odio, ac consectetur tellus. Etiam sollicitudin purus vel magna vulputate rhoncus. Quisque fringilla velit nulla, a mollis lectus pulvinar eget. Donec non neque et lectus hendrerit eleifend in in tortor. Nam tristique velit ac ex bibendum varius. In lacinia, mi at fringilla hendrerit, tellus est aliquam nunc, ac fringilla nibh neque a nibh. Vestibulum facilisis urna a nisi consectetur suscipit. Integer scelerisque efficitur ex non blandit.</p>
+		<p>I am a student at William Lyon Mackenzie CI who is/has taken the ICS4U0 course. I have taken this course in grade 10 as part of an enrichment opportunity as I am in the MaCS program.</p>
+		<p>In my spare time I tend to work with computers. I mostly build some fun software to entertain myself. The best of this software gets released on my github. When I am programming for my own projects, I tend to use the C programming language for more complex and long term projects, while I use Ruby when I just want to do something quickly, and effectively.</p>
+		<p>In general I spend a majority of my free time programming however this is not my only hobby, my other hobbies generally involve global issues and politics. This diversity in hobbies allows me to understand a variety of people, at least at a basic level, no matter the subject.</p>
+		<br><h3>As a student...</h3>
+		<p>As a student I am very focused on what I work, and I prefer solitary work. For this course we had to take personally type tests. Through this I discovered that I fit into the INTJ personality type. These traits stand for Introverted, iNtuitive, Thinking, and Judging. The first of those traits was already mentioned above. The second traits means that I have a certain effectiveness and self confidence when making decisions. The Thinking and Judging mean that my personality type is good at perceiving details and possible flaws. INTJ also tend to know where their boundaries lie, and what they don’t know.</p>
+		<h1>My Accounts</h1><hr>
+		<center>
+			<a href="https://github.com/6167656e74323431" class="account"><div class="account">
+				<img src="assets/images/logos/GitHub.png" width=80px>
+				<p class="account">GitHub<br>&nbsp;</p>
+			</div></a>
+			<a href="https://mcpt.ca/user/yes" class="account"><div class="account">
+				<img src="assets/images/logos/WLMOJ.png" width=80px>
+				<p class="account">WLMOJ<br>(School Judge)</p>
+			</div></a>
+			<a href="https://dmoj.ca/user/6167656e74323431" class="account"><div class="account">
+				<img src="assets/images/logos/DMOJ.png" width=80px>
+				<p class="account">DMOJ<br>(Main)</p>
+			</div></a>
+			<a href="https://dmoj.ca/user/judge" class="account"><div class="account">
+				<img src="assets/images/logos/DMOJ.png" width=80px>
+				<p class="account">DMOJ<br>(Turing Only)</p>
+			</div></a>
+		</center>
 	</div>
 </body>
 </html>
