--- a/concept/1/index.html
+++ b/concept/1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url='./object-oriented-programming-1/oop1.html'" />
+	<meta http-equiv="refresh" content="0; url='dont-fear-the-oop.html'"/>
 </head>
 <body>
 	<b>Redirecting...</b>
