--- a/concepts.html
+++ b/concepts.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/core.css">
-	<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/concepts.css">
+	<title>Concept List</title>
+	<link rel="stylesheet" type="text/css" href="css/core.css">
+	<link rel="stylesheet" type="text/css" href="css/concepts.css">
+	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<iframe src="./navbar.html" frameborder="0"><p>Please use a browser that supporst iframes.</p></iframe>
@@ -10,31 +12,71 @@
 		<h1>Concepts</h1><hr>
 		<ul>
 			<li>
-				<a href="concept/1/object-oriented-programming-1/oop1.html">Don't Fear The OOP Assignment</a>
+				<a href="concept/1/dont-fear-the-oop.html">Don't Fear The OOP Assignment</a>
 				<object class="previewText">[preview]</object>
 				<div class="preview">
-					<iframe class="previewDisplay" src="concept/1/object-oriented-programming-1/preview.html" scrolling="no">
-						<p>Please use a browser that supporst iframes.</p>
+					<iframe class="previewDisplay" src="concept/1/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
 					</iframe>
 				</div>
 				<hr>
 			</li>
 			<li>
-				<a href="404.html">Introdution to Object-Oriented Programming</a>
+				<a href="concept/2/oop-intro.html">Introdution to Object-Oriented Programming</a>
 				<object class="previewText">[preview]</object>
 				<div class="preview">
-					<iframe class="previewDisplay" src="404.html" scrolling="no">
-						<p>Please use a browser that supporst iframes.</p>
+					<iframe class="previewDisplay" src="concept/2/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
 					</iframe>
 				</div>
 				<hr>
 			</li>
 			<li>
-				<a href="404.html">Java GUI Programming with Swing</a>
+				<a href="concept/3/array-arraylist.html">Arrays and ArrayLists</a>
 				<object class="previewText">[preview]</object>
 				<div class="preview">
-					<iframe class="previewDisplay" src="404.html" scrolling="no">
-						<p>Please use a browser that supporst iframes.</p>
+					<iframe class="previewDisplay" src="concept/3/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
+					</iframe>
+				</div>
+				<hr>
+			</li>
+			<li>
+				<a href="concept/4/search.html">Search Algorithms</a>
+				<object class="previewText">[preview]</object>
+				<div class="preview">
+					<iframe class="previewDisplay" src="concept/4/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
+					</iframe>
+				</div>
+				<hr>
+			</li>
+			<li>
+				<a href="concept/5/sort.html">Merge Sort</a>
+				<object class="previewText">[preview]</object>
+				<div class="preview">
+					<iframe class="previewDisplay" src="concept/5/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
+					</iframe>
+				</div>
+				<hr>
+			</li>
+			<li>
+				<a href="concept/6/recursion.html">Recursion</a>
+				<object class="previewText">[preview]</object>
+				<div class="preview">
+					<iframe class="previewDisplay" src="concept/6/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
+					</iframe>
+				</div>
+				<hr>
+			</li>
+			<li>
+				<a href="concept/7/polymorphism.html">Object-Oriented Programming 2 - Polymorphism</a>
+				<object class="previewText">[preview]</object>
+				<div class="preview">
+					<iframe class="previewDisplay" src="concept/7/preview.html" scrolling="no">
+						<p>Please use a browser that supports iframes.</p>
 					</iframe>
 				</div>
 				<hr>
