--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,7 @@
-<link rel="stylesheet" type="text/css" href="/ICS4U0-Portfolio/css/navbar.css">
+<link rel="stylesheet" type="text/css" href="css/navbar.css">
 <ul>
 	<li><a href="index.html" target="_top">Theodore's ICS4U0 Portfolio</a></li>
 	<li><a href="about.html" target="_top">About</a></li>
 	<li><a href="concepts.html" target="_top">Concepts</a></li>
+	<li><a href="projects.html" target="_top">My Projects</a></li>
 </ul>
