--- a/navbar.html
+++ b/navbar.html
@@ -4,4 +4,5 @@
 	<li><a href="about.html" target="_top">About</a></li>
 	<li><a href="concepts.html" target="_top">Concepts</a></li>
 	<li><a href="projects.html" target="_top">My Projects</a></li>
+	<li><a href="final.html" target="_top">Final Project</a></li>
 </ul>
